# LLMOS-Bridge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LLMOS_Bridge_Bilan_Et_Feuille_De_Route.md  LLMOS_Bridge_CdC_Addendum_Composant8_TriggerDaemon.md  LLMOS_Bridge_CdC_v2_Complet.docx  README.md  pyproject.toml  python_asyncio_vs_threading_report.md
.claude/: settings.json
docs/: docusaurus-config.md
docs/annotators/: decorators.md
docs/app-language/: 00-index.md  01-getting-started.md  02-app-config.md  03-agents.md  04-tools.md  05-memory.md  06-context-management.md  07-flows.md  08-macros.md  09-triggers.md  10-expressions.md  11-security.md  12-multi-agent.md  13-observability.md  14-api-integration.md  15-examples.md
docs/modules/fundamentals/: creating-modules.md  module-system.md
docs/modules/reference/: agent_spawn.md  api_http.md  browser.md  computer_control.md  context_manager.md  database.md  db_gateway.md  excel.md  filesystem.md  gui.md  iot.md  memory.md  module_manager.md  os_exec.md  powerpoint.md  recording.md  security.md  triggers.md  vision.md  window_tracker.md  word.md
docs/overview/: action-cache.md  architecture.md  configuration.md  events.md  exceptions-logging.md  hub-isolation.md  orchestration.md  perception.md  sdk.md  security.md  triggers-recording.md
docs/protocol/: iml-protocol.md
examples/: benchmark_ollama.py  claude-code.app.yaml  code-reviewer.app.yaml  compare_vision_backends.py  computer_use_demo.py  data-pipeline.app.yaml  devops-automation.app.yaml  hello_world.py  linkedin_profile_test.py  real_computer_use_test.py  research-agent.app.yaml  security-fortress.app.yaml  test.py  test_enhanced_perception.py  test_ollama_minimal.py
examples/e2e-test-apps/: 01-code-assistant.app.yaml  02-web-research.app.yaml  03-desktop-automation.app.yaml  04-office-pipeline.app.yaml  05-security-hardened.app.yaml  06-iot-monitoring.app.yaml  07-database-etl.app.yaml  08-multi-agent-team.app.yaml  09-module-manager.app.yaml  10-full-capability.app.yaml  README.md
root_pkg/: __init__.py
scripts/: check-types.sh  setup-dev.sh  test_excel_llm.py  test_parallel_llm.py  test_with_llm.py
test/: fichier_test.txt
